@@ -21,6 +21,21 @@ SYNOPSIS
     puts record.metadata
   end
 
+INSTALLATION
+
+  Normally the best way to install oai is from rubyforge using the gem
+  command line tool:
+
+    % gem install oai
+
+  If you're reading this you've presumably got the tarball or zip distribution.
+  So you'll need to:
+
+    % rake package
+    % gem install pkg/oai-x.y.z.gem 
+
+  Where x.y.z is the version of the gem that was generated.
+
 BUGS/SUGGESTIONS
 
 - Ed Summers <ehs@pobox>
