@@ -1,13 +1,0 @@
-#!/usr/bin/env ruby
-
-$LOAD_PATH.unshift 'lib'
-
-require 'test/unit'
-require 'oai'
-require 'test/tc_list_identifiers'
-require 'test/tc_list_metadata_formats'
-require 'test/tc_identify'
-require 'test/tc_get_record'
-require 'test/tc_list_records'
-require 'test/tc_list_sets'
-require 'test/tc_exception'
