@@ -1,5 +1,3 @@
-require 'date'
-
 class ListIdentifiersTest < Test::Unit::TestCase
 
   def test_list_with_resumption_token
