@@ -1,3 +1,6 @@
+???
+- added Rakefile, removed standalone gemspec and test.rb
+
 v0.0.2 Mon May 15 13:59:33 EST 2006
 - added debug support to OAI::Client
 - added more expressive exceptions to distinguish XML parse errors from 
